--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,15 @@ body {
   line-height: 2;
 }
 
+.reflection-delayed {
+  opacity: 0;
+  transition: opacity 1.5s ease;
+}
+
+.panel--reflection.is-active .reflection-delayed.is-visible {
+  opacity: 1;
+}
+
 .divider {
   width: 60px;
   height: 1px;
